Bug 1832331 - Don't force WS_POPUP for windows without a titlebar. r=rkraesig

That's a rather obscure side effect, which causes the window not to be
recognized as toplevel in some tools.

Other platforms don't have such weirdness. You can still create windows
with WindowType::Popup for that.

Note: We also remove the WS_CHILD bit, which is there just because the
documentation mentions that it's exclusive with WS_POPUP, but I don't
think anything sets that bit earlier, so it's a no-op.

Differential Revision: https://phabricator.services.mozilla.com/D177673